force-app/main/default/objects/ssot__Prospect__dlm/fields/ssot__ConvertedAccountId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConvertedAccountId__c</fullName>
    <label>Converted Account</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConvertedAccountId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>