force-app/main/default/objects/ssot__Prospect__dlm/fields/ssot__ConvertedDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConvertedDateTime__c</fullName>
    <label>Converted DateTime</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConvertedDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>