force-app/main/default/objects/ssot__Prospect__dlm/fields/ssot__ConvertedLeadId__c.field-meta.xml
<CustomField>
    <fullName>ssot__ConvertedLeadId__c</fullName>
    <label>Converted Lead</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ConvertedLeadId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>