force-app/main/default/objects/ssot__Prospect__dlm/fields/ssot__Industry__c.field-meta.xml
<CustomField>
    <fullName>ssot__Industry__c</fullName>
    <label>Industry</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>Industry</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>