force-app/main/default/objects/ssot__Prospect__dlm/fields/ssot__IsConverted__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsConverted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Converted</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsConverted</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>