force-app/main/default/objects/ssot__Prospect__dlm/fields/ssot__ProspectStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ProspectStatus__c</fullName>
    <label>Prospect Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ProspectStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>