force-app/main/default/objects/ssot__Prospect__dlm/fields/ssot__rel_1722508390609_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1722508390609_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect_ContactPointEmailId_map_Con_rel</label>
    <referenceTo>ssot__ContactPointEmail__dlm</referenceTo>
    <relationshipLabel>Prospect_ContactPointEmailId_map_Con_rel</relationshipLabel>
    <relationshipName>rel_1722508390609_end</relationshipName>
    <type>Lookup</type>
</CustomField>