force-app/main/default/objects/ssot__Prospect__dlm/fields/ssot__rel_1722508699097_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1722508699097_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect_IndividualId_map_Individual_rel</label>
    <referenceTo>ssot__Individual__dlm</referenceTo>
    <relationshipLabel>Prospect_IndividualId_map_Individual_rel</relationshipLabel>
    <relationshipName>rel_1722508699097_end</relationshipName>
    <type>Lookup</type>
</CustomField>