force-app/main/default/objects/ssot__Prospect__dlm/fields/ssot__rel_1724381903718_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1724381903718_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect_ContactPointPhoneId_map_Con_rel</label>
    <referenceTo>ssot__ContactPointPhone__dlm</referenceTo>
    <relationshipLabel>Prospect_ContactPointPhoneId_map_Con_rel</relationshipLabel>
    <relationshipName>rel_1724381903718_end</relationshipName>
    <type>Lookup</type>
</CustomField>